--- a/bookmarks/templates/bookmarks/index.html
+++ b/bookmarks/templates/bookmarks/index.html
@@ -14,6 +14,23 @@ Bookmarks:
 </ul>
 
 {% else %}
-Yes, we have no bookmarks
-
+You have no bookmarks
 {% endif %}
+
+
+Personal Bookmarks:
+{% if personal_bookmarks %}
+<ul>
+  {% for bookmark in personal_bookmarks %}
+  <li>
+    <a href="{{bookmark.url}}">{{bookmark.name}}</a>
+    <div>Created at {{bookmark.created_at}}</div>
+    <div>{{bookmark.notes}}</div>
+  </li>
+  {% endfor %}
+</ul>
+
+{% else %}
+You have no personal bookmarks
+{% endif %}
+
