Added form to add new bookmark

--- a/bookmarks/templates/bookmarks/index.html
+++ b/bookmarks/templates/bookmarks/index.html
@@ -34,3 +34,9 @@ Personal Bookmarks:
 You have no personal bookmarks
 {% endif %}
 
+<h2>Add New Bookmark</h2>
+<form method="POST" class="bookmark-form">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit" class="save btn btn-default">Save</button>
+</form>
