--- a/bookmarks/templates/bookmarks/djorg_base.html
+++ b/bookmarks/templates/bookmarks/djorg_base.html
@@ -6,5 +6,13 @@
 </div>
 
 <div class="Site-Container">
-  <a href="/bookmarks">Go to your bookmarks</a>
+  <ul>
+    <li>
+      <a style="display: block" href="/bookmarks">Go to your bookmarks</a>
+    </li>
+
+    <li>
+      <a href="/admin">Admin Login</a>
+    </li>
+  </ul>
 </div>
